--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/t3-chat-contest"
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+# better-auth
+BETTER_AUTH_SECRET="your-auth-secret"
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
